--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 	<!-- Target -->
 	<textarea id="bar" ng-model='text'></textarea>
 	<!-- Trigger -->
-	<button class="btn"  clip-action="copy" clip-model="text" clip-alert='true' clip-success-text="地址已经复制到剪贴板!" clipboard>
+	<button class="btn" id='copyBtn' clip-action="copy" clip-model="text" clip-alert='true' clip-success-text="地址已经复制到剪贴板!" clipboard>
 	    复制到剪贴板
 	</button>
 </div>
